Fixed voting issue and correcting spacing for game lobbies

--- a/PhotoBattle/app/assets/stylesheets/scaffolds.scss
+++ b/PhotoBattle/app/assets/stylesheets/scaffolds.scss
@@ -127,3 +127,7 @@ label {
 .actions {
   padding-top: 30px;
 }
+
+.game-lobby {
+  padding: 7px;
+}
